    [HBASE-7421] - TestHFileCleaner->testHFileCleaning has an aggressive timeout
    [HBASE-7422] - MasterFS doesn't set configuration for internal FileSystem
    [HBASE-7432] - TestHBaseFsck prevents testsuite from finishing
    [HBASE-7435] - BuiltInGzipDecompressor is only released during full GC
    [HBASE-7440] - ReplicationZookeeper#addPeer is racy

Improvement

    [HBASE-4791] - Allow Secure Zookeeper JAAS configuration to be programmatically set (rather than only by reading JAAS configuration file)
    [HBASE-5616] - Make compaction code standalone
    [HBASE-5693] - When creating a region, the master initializes it and creates a memstore within the master server
    [HBASE-5778] - Fix HLog compression's incompatibilities
    [HBASE-5888] - Clover profile in build
    [HBASE-6585] - Audit log messages should contain info about the higher level operation being executed
    [HBASE-6775] - Use ZK.multi when available for HBASE-6710 0.92/0.94 compatibility fix
    [HBASE-7190] - Add an option to hbck to check only meta and assignment
    [HBASE-7197] - Add multi get to RemoteHTable
    [HBASE-7199] - hbck should check lingering reference hfile and have option to sideline them automatically
    [HBASE-7204] - Make hbck ErrorReporter pluggable
    [HBASE-7231] - port HBASE-7200 create integration test for balancing regions and killing region servers to 0.94
    [HBASE-7249] - add test name filter to IntegrationTestsDriver
    [HBASE-7328] - IntegrationTestRebalanceAndKillServersTargeted supercedes IntegrationTestRebalanceAndKillServers, remove
    [HBASE-7359] - [REST] 'accessToken' in RemoteHTable is vestigial
    [HBASE-7374] - Expose master table operations for coprocessors by way of MasterServices
    [HBASE-7377] - Clean up TestHBase7051
    [HBASE-7381] - Lightweight data transfer for Class Result

Task

    [HBASE-5258] - Move coprocessors set out of RegionLoad